--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,36 @@
 aniso8601==9.0.1
 blinker==1.6.2
+cachetools==5.3.0
+certifi==2023.5.7
+charset-normalizer==3.1.0
 click==8.1.3
 flake8==6.0.0
 Flask==2.3.2
 Flask-RESTful==0.3.9
+google-api-core==2.11.0
+google-auth==2.17.3
+google-cloud-appengine-logging==1.3.0
+google-cloud-audit-log==0.2.5
+google-cloud-core==2.3.2
+google-cloud-logging==3.5.0
+googleapis-common-protos==1.59.0
+grpc-google-iam-v1==0.12.6
+grpcio==1.54.0
+grpcio-status==1.54.0
+idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
 mccabe==0.7.0
+proto-plus==1.22.2
+protobuf==4.23.0
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
 pycodestyle==2.10.0
 pyflakes==3.0.1
 pytz==2023.3
+requests==2.30.0
+rsa==4.9
 six==1.16.0
+urllib3==2.0.2
 Werkzeug==2.3.3
