--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ certifi==2023.5.7
 charset-normalizer==3.1.0
 click==8.1.3
 flake8==6.0.0
+flash==1.0.3
 Flask==2.3.2
 Flask-RESTful==0.3.9
 google-api-core==2.11.0
