--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,18 +8,13 @@ services:
       MONGO_INITDB_ROOT_USERNAME: admin
       MONGO_INITDB_ROOT_PASSWORD: admin
     restart: always
-
+  
   api:
-    build:
-      context: .
+    build: .
     ports:
       - 5000:5000
     restart: always
     depends_on:
       - mongodb
-    
-
-
-  
-    
-    
+    volumes:
+      - .:/app
