--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,25 @@
 aniso8601==9.0.1
 blinker==1.6.2
 click==8.1.3
-Flask==2.3.2
+dnspython==2.3.0
+email-validator==2.0.0.post2
+flake8==6.0.0
+Flask==2.2.3
+flask-mongoengine==1.0.0
 Flask-RESTful==0.3.9
+Flask-WTF==1.1.1
+idna==3.4
 importlib-metadata==6.6.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
+mccabe==0.7.0
+mongoengine==0.27.0
+pycodestyle==2.10.0
+pyflakes==3.0.1
+pymongo==4.3.3
 pytz==2023.3
 six==1.16.0
 Werkzeug==2.3.4
+WTForms==3.0.1
 zipp==3.15.0
